<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".client.view.main.status.StatusActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:id="@+id/cardWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@id/userImage"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/sampleUserName" />

            <ImageButton
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="false"
                android:layout_marginRight="0dp"
                android:background="#FFFFFF"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />
        </RelativeLayout>

            <EditText
                android:id="@+id/editMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/statusPlaceholder"
                android:inputType="textMultiLine"
                android:padding="16dp" />

            <LinearLayout
                android:id="@+id/countBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editMessage"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/constraint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/maxChar" />

            </LinearLayout>

            <TextView
                android:id="@+id/warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/countBox"
                android:layout_alignParentEnd="true"
                android:layout_weight="0"
                android:textColor="#F44336" />

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/warning"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:padding="16dp"
                android:text="@string/share"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="visible"
                tools:visibility="visible" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>